[package]
name = "chaoxin-checkin"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart","stream"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
regex = "1.5.5"
tokio-util = { version = "0.7.1", features = ["codec"] }
tokio = { version = "1.18.1", features = ["full", "macros"] }
scraper = "0.13.0"
image = "0.24.2"
lazy_static = "1.4.0"
futures = "0.3.21"
rqrr = "0.5.1"
qrcode = "0.12.0"
chrono = "0.4.19"
paris = { version = "1.5.13", features = ["macros"] }
playwright = "0.0.19"
maplit = "1.0.2"
office = "0.8.1"
rust-fuzzy-search = "0.1.1"